--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #0b0c10;
+  background: #74d4f7;
   font-family: sans-serif;
   text-align: center;
   margin: 0;
@@ -16,7 +16,7 @@ h1 {
 }
 
 .blackhole-img {
-  width: 220px;
+  width: 400px;
   border-radius: 10px;
   margin: 12px 0;
 }
