--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: sans-serif;
   text-align: center;
   margin: 0;
-  color: #74d4f7;
+  color: #043008;
 }
 
 .space {
@@ -27,6 +27,6 @@ h2 {
 }
 
 p {
-  color: #0a0909;
+  color: #b3e5fc;
   font-size: 30px;
 }
